# interview-tasks

./: README.md
algorithms/: .gitignore  README.md  pyproject.toml
algorithms/two-pointers/elements-square-sort/: task.py
algorithms/two-pointers/fuzzy_match/: task.py
algorithms/two-pointers/intersect/: task.py
algorithms/two-pointers/is-palindrome/: task.py
algorithms/two-pointers/max-area/: task.py
algorithms/two-pointers/reverse/: task.py
algorithms/two-pointers/sorted-modules/: task.py
algorithms/two-pointers/two-sum/: task.py
js/array-flat/: index.js
js/common-js/: index.js
js/csv-parse/: index.js
js/debounce/: index.js
js/event-emitter/: index.js
js/get-tree-values/: index.js
js/polyfills/flat/: index.js
js/polyfills/promise/: index.js
js/polyfills/promise-all/: index.js
js/polyfills/promise-allsettled/: index.js
js/polyfills/reduce/: index.js
js/queue-2stacks/: index.js
js/string-multiply/: index.js
react/counter-hover/: README.md  package-lock.json  package.json
react/counter-hover/src/: App.jsx
react/messages-likes/: README.md  package-lock.json  package.json
react/messages-likes/src/: App.jsx
react/refactor-1/: README.md  package-lock.json  package.json
react/refactor-1/src/: App.tsx
react/todo-app/: README.md  package-lock.json
react/todo-app/src/: App.css  App.jsx
react/virtualized-list/: README.md  package-lock.json  package.json
react/virtualized-list/src/: App.tsx  VirtualizedList.tsx  index.css
